--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -38,3 +38,22 @@ body {
   outline: none;
   border-radius: 5px;
 }
+
+@media (max-width: 576px) {
+  .app-container {
+    background-image: url('https://assets.ccbp.in/frontend/react-js/home-sm-bg.png');
+    padding: 20px;
+    height: 100vh;
+    justify-content: flex-start;
+  }
+  .home-main-heading {
+    font-size: 36px;
+    margin-top: 30px;
+  }
+  .home-description {
+    font-size: 18px;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+}
